# rules_rust

examples/: WORKSPACE  examples_deps.bzl  examples_transitive_deps.bzl
examples/wasm_webpage/: BUILD.bazel  Cargo.toml  main.rs  package-lock.json  package.json
examples/wasm_webpage/raze/: BUILD.bazel  crates.bzl
examples/wasm_webpage/raze/remote/: BUILD.bumpalo-3.6.1.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.js-sys-0.3.47.bazel  BUILD.lazy_static-1.4.0.bazel  BUILD.log-0.4.14.bazel  BUILD.proc-macro2-1.0.24.bazel  BUILD.quote-1.0.9.bazel  BUILD.syn-1.0.60.bazel  BUILD.unicode-xid-0.2.1.bazel  BUILD.wasm-bindgen-0.2.70.bazel  BUILD.wasm-bindgen-backend-0.2.70.bazel  BUILD.wasm-bindgen-macro-0.2.70.bazel  BUILD.wasm-bindgen-macro-support-0.2.70.bazel  BUILD.wasm-bindgen-shared-0.2.70.bazel  BUILD.web-sys-0.3.47.bazel
