# Copyright 2020 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# buildifier: disable=module-docstring
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_test")
load("@rules_rust//rust:rust.bzl", "rust_binary")
load("@rules_rust//wasm_bindgen:wasm_bindgen.bzl", "rust_wasm_bindgen")
load("@rules_rust//bindgen:bindgen.bzl", "rust_bindgen_toolchain")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "main_wasm",
    srcs = ["main.rs"],
    edition = "2018",
    deps = [
        "//wasm_webpage/raze:wasm_bindgen",
        "//wasm_webpage/raze:web_sys",
    ],
)

rust_wasm_bindgen(
    name = "main_wasm_bindgen",
    wasm_file = ":main_wasm",
)

nodejs_test(
    name = "hello_world_wasm_test",
    data = [":hello_world_wasm_bindgen"],
    entry_point = "hello_world_wasm_test.js",
)

load("@rules_rust_example_wasm_webpage_npm_deps//http-server:index.bzl", "http_server")

http_server(
    name = "server",
    data = [":main_wasm_bindgen"],
)

rust_bindgen_toolchain(
    name = "wasm-bindgen-toolchain-impl",
    bindgen = "//wasm_webpage/raze:wasm_bindgen",
)

toolchain(
    name = "wasm-bindgen-toolchain",
    toolchain = "wasm-bindgen-toolchain-impl",
    toolchain_type = "@rules_rust//wasm_bindgen:wasm_bindgen_toolchain",
)
